--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1276,4 +1276,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="size">Size</string>
     <string name="align">Alignment</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
+    <string name="editor.next">NEXT</string>
 </resources>
