--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1306,4 +1306,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">वैकल्पिक</string>
+    <string name="story_text_description_hindi">यहां आप सुविचार (कोट्स) लिख सकते हैं|</string>
+    <string name="stroy_overflow_layout">आपकी कहानी बहुत लंबी है। कृपया फ़ॉन्ट साइज़ कम करें या कहानी को छोटा करें।</string>
+    <string name="short_s_write">Write</string>
 </resources>
