--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1325,4 +1325,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">ಐಚ್ಛಿಕ</string>
+    <string name="story_text_description_hindi">ನಿಮ್ಮ ನುಡಿಗಟ್ಟುಗಳನ್ನು ಇಲ್ಲಿ ಬರೆಯಿರಿ</string>
+    <string name="stroy_overflow_layout">ನಿಮ್ಮ ಕಥೆ ಕೊಂಚ ಉದ್ದವೆನಿಸುತ್ತಿದೆ. ಫಾಂಟ್ ಸೈಜ್ ಅಥವಾ ಕಥೆಯ ಪದಗಳ ಸಂಖ್ಯೆಯನ್ನು ಕಡಿಮೆಗೊಳಿಸಿ.</string>
+    <string name="short_s_write">ಬರೆಯಿರಿ</string>
 </resources>
