--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1330,4 +1330,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">ഐച്ഛികം</string>
+    <string name="story_text_description_hindi">നിങ്ങളുടെ ഉദ്ധരണികൾ ഇവിടെ എഴുതാം</string>
+    <string name="stroy_overflow_layout">നിങ്ങളുടെ കഥ വളരെ ദൈർ‌ഘ്യമേറിയതാണ്. ദയവായി ഫോണ്ടിന്റെ വലുപ്പം കുറയ്‌ക്കുക അല്ലെങ്കിൽ‌ കഥ  ചെറുതാക്കുക.</string>
+    <string name="short_s_write">എഴുതുക</string>
 </resources>
