--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1282,4 +1282,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">விருப்பமானவை</string>
+    <string name="story_text_description_hindi">உங்கள் கவிதைகளை இங்கு எழுதலாம்</string>
+    <string name="stroy_overflow_layout">உங்கள் கதை  நீளமாக உள்ளது . தயவுசெய்து எழுத்தளவைக் குறைக்கவும் அல்லது கதையைச் சுருக்கவும்.</string>
+    <string name="short_s_write">எழுத</string>
 </resources>
