--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1285,4 +1285,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">ఇష్ట ప్రకారం</string>
+    <string name="story_text_description_hindi">మీరు మీ సూక్తులను ఇక్కడ రాయండి</string>
+    <string name="stroy_overflow_layout">మీ కథ చాలా పెద్దగా ఉంది. ఫాంట్ సైజ్ తగ్గించండి లేదా కథ నిడివి తగ్గించండి.</string>
+    <string name="short_s_write">వ్రాయండి</string>
 </resources>
