--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1010,7 +1010,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     //groupdetail Activity toast String
     <string name="story_text_title_hindi">विचारसागर</string>
-    <string name="story_text_description_hindi">यहाँ आप सुविचार (कोट्स) लिख सकते हैं.</string>
+    <string name="story_text_description_hindi">You can write your quotes here</string>
     <string name="campaign_name">Campaign Name \n Facebook Campaign</string>
     <string name="reward_campaign_add_proof">ADD PROOF</string>
     <string name="select_payment_method">PREFERRED METHOD OF PAYMENT</string>
@@ -1453,5 +1453,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
     <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="short_s_add_title_Optional">Optional</string>
+    <string name="stroy_overflow_layout">Your story is too long. Please reduce the font size or shorten the story.</string>
+    <string name="short_s_write">Write</string>
 </resources>
 
