100 word story sprint

--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1320,15 +1320,15 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">പശ്ചാത്തലം</string>
+    <string name="text">ടെക്സ്റ്റ്</string>
+    <string name="size">സൈസ്</string>
+    <string name="align">വിന്യാസം</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">അടുത്തത്</string>
+    <string name="max_limit">നിങ്ങൾ പരമാവധി പരിധിയിലെത്തി</string>
+    <string name="min_limit">നിങ്ങൾ കുറഞ്ഞ പരിധിയിലെത്തി</string>
+    <string name="library">ലൈബ്രറി</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">ഐച്ഛികം</string>
     <string name="story_text_description_hindi">നിങ്ങളുടെ ഉദ്ധരണികൾ ഇവിടെ എഴുതാം</string>
