--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1338,15 +1338,15 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">ਪਿਛੋਕੜ</string>
+    <string name="text">ਟੈਕਸਟ</string>
+    <string name="size">ਆਕਾਰ</string>
+    <string name="align">ਸਥਿਤੀ</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">ਅਗਲਾ</string>
+    <string name="max_limit">ਤੁਸੀਂ ਅਧਿਕਤਮ ਸੀਮਾ ਤੇ ਪਹੁੰਚ ਗਏ ਹੋ</string>
+    <string name="min_limit">ਤੁਸੀਂ ਘੱਟੋ ਘੱਟ ਸੀਮਾ ਤੇ ਪਹੁੰਚ ਗਏ ਹੋ</string>
+    <string name="library">ਲਾਇਬ੍ਰੇਰੀ</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">ਵਿਕਲਪਿਕ</string>
     <string name="stroy_overflow_layout">ਤੁਹਾਡੀ ਕਹਾਣੀ ਬਹੁਤ ਲੰਬੀ ਹੈ. ਕਿਰਪਾ ਕਰਕੇ ਫੋਂਟ ਦਾ ਆਕਾਰ ਘਟਾਓ ਜਾਂ ਕਹਾਣੀ ਨੂੰ ਛੋਟਾ ਕਰੋ</string>
