--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1280,18 +1280,18 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">প্রেক্ষাপট</string>
+    <string name="text">টেক্সট</string>
+    <string name="size">শব্দের আকার ও আয়তন</string>
+    <string name="align">শব্দের শ্রেণী বিন্যাস</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">পরের ধাপ দেখুন</string>
+    <string name="max_limit">আপনার গল্পের টেক্সট সর্বাধিক আকার অতিক্রম করেছে</string>
+    <string name="min_limit">আপনার গল্পের টেক্সট ন্যূনতম আকার অতিক্রম করেছে</string>
+    <string name="library">লাইব্রেরী</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">ইচ্ছানুযায়ী</string>
     <string name="story_text_description_hindi">আপনার উক্তি বা উদ্ধৃতি এখানে লিখতে পারেন</string>
     <string name="stroy_overflow_layout">আপনার গল্পটি খুব বড়। অনুগ্রহ করে শব্দের আকার কমান বা গল্পটিকে ছোট করুন।</string>
-    <string name="short_s_write">Write</string>
+    <string name="short_s_write">লিখুন</string>
 </resources>
