--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1296,18 +1296,18 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">पृष्ठभूमि</string>
+    <string name="text">टेक्स्ट</string>
+    <string name="size">आकार</string>
+    <string name="align">स्थिति</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">अगली</string>
+    <string name="max_limit">आप शब्दों के फॉन्ट साइज की अधिकतम सीमा तक पहुँच चुके हैं</string>
+    <string name="min_limit">आप शब्दों के फॉन्ट साइज की न्यूनतम सीमा तक पहुँच चुके हैं</string>
+    <string name="library">लाइब्रेरी</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">वैकल्पिक</string>
     <string name="story_text_description_hindi">यहां आप सुविचार (कोट्स) लिख सकते हैं|</string>
     <string name="stroy_overflow_layout">आपकी कहानी बहुत लंबी है। कृपया फ़ॉन्ट साइज़ कम करें या कहानी को छोटा करें।</string>
-    <string name="short_s_write">Write</string>
+    <string name="short_s_write">लिखें</string>
 </resources>
