--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1317,10 +1317,10 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_report_content">REPORT CONTENT</string>
     <string name="background">BACKGROUND</string>
     <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="size">ಸೈಜ್</string>
+    <string name="align">ವಿನ್ಯಾಸ</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
+    <string name="editor.next">ಮುಂದೆ</string>
     <string name="max_limit">You have reached maximum limit</string>
     <string name="min_limit">You have reached minimum limit</string>
     <string name="library">Library</string>
