--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -1272,15 +1272,15 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">பின்னணியமைப்பு</string>
+    <string name="text">வடிவமை</string>
+    <string name="size">எழுத்தளவு</string>
+    <string name="align">ஒழுங்குபடுத்து</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">அடுத்து</string>
+    <string name="max_limit">எழுத்தளவை இதை விட அதிகரிக்க முடியாது.</string>
+    <string name="min_limit">எழுத்தளவை இதை விட  குறைக்க முடியாது.</string>
+    <string name="library">பெட்டகம்</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">விருப்பமானவை</string>
     <string name="story_text_description_hindi">உங்கள் கவிதைகளை இங்கு எழுதலாம்</string>
