--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1275,15 +1275,15 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="all_refer_url">https://www.momspresso.com/usersprofile/rewardsform?referrer=%1$s</string>
     <string name="please_add_item_multicollection_activity">Please Add Items</string>
     <string name="all_report_content">REPORT CONTENT</string>
-    <string name="background">BACKGROUND</string>
-    <string name="text">TEXT</string>
-    <string name="size">Size</string>
-    <string name="align">Alignment</string>
+    <string name="background">వెనుకభాగం</string>
+    <string name="text">టెక్స్ట్</string>
+    <string name="size">సైజ్</string>
+    <string name="align">అమరిక</string>
     <string name="short_s_max_title_word">Your title can have maximum 10 words.</string>
-    <string name="editor.next">NEXT</string>
-    <string name="max_limit">You have reached maximum limit</string>
-    <string name="min_limit">You have reached minimum limit</string>
-    <string name="library">Library</string>
+    <string name="editor.next">తరువాత</string>
+    <string name="max_limit">మీ చిత్ర పరిమాణం ఎక్కువగా ఉంది</string>
+    <string name="min_limit">మీ చిత్ర పరిమాణం తక్కువగా ఉంది</string>
+    <string name="library">లైబ్రరీ</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">ఇష్ట ప్రకారం</string>
     <string name="story_text_description_hindi">మీరు మీ సూక్తులను ఇక్కడ రాయండి</string>
