--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1456,5 +1456,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="short_s_add_title_Optional">Optional</string>
     <string name="stroy_overflow_layout">Please reduce the text font size or shorten the story length to proceed.</string>
     <string name="short_s_write">Write</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
 
