--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1294,4 +1294,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="story_text_description_hindi">আপনার উক্তি বা উদ্ধৃতি এখানে লিখতে পারেন</string>
     <string name="stroy_overflow_layout">আপনার গল্পটি খুব বড়। অনুগ্রহ করে শব্দের আকার কমান বা গল্পটিকে ছোট করুন।</string>
     <string name="short_s_write">লিখুন</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
