--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1334,4 +1334,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="story_text_description_hindi">നിങ്ങളുടെ ഉദ്ധരണികൾ ഇവിടെ എഴുതാം</string>
     <string name="stroy_overflow_layout">നിങ്ങളുടെ കഥ വളരെ ദൈർ‌ഘ്യമേറിയതാണ്. ദയവായി ഫോണ്ടിന്റെ വലുപ്പം കുറയ്‌ക്കുക അല്ലെങ്കിൽ‌ കഥ  ചെറുതാക്കുക.</string>
     <string name="short_s_write">എഴുതുക</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
