--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1287,4 +1287,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="story_text_description_hindi">तुम्ही इथे सुविचार (कोट्स) लिहू शकता.</string>
     <string name="stroy_overflow_layout">तुमची कथा खूप मोठी झाली आहे कृपया फॉन्टचा आकार कमी करा किंवा कथा छोटी करा.</string>
     <string name="short_s_write">लिहा</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
