--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1351,4 +1351,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="short_s_add_title_Optional">ਵਿਕਲਪਿਕ</string>
     <string name="stroy_overflow_layout">ਤੁਹਾਡੀ ਕਹਾਣੀ ਬਹੁਤ ਲੰਬੀ ਹੈ. ਕਿਰਪਾ ਕਰਕੇ ਫੋਂਟ ਦਾ ਆਕਾਰ ਘਟਾਓ ਜਾਂ ਕਹਾਣੀ ਨੂੰ ਛੋਟਾ ਕਰੋ</string>
     <string name="short_s_write">ਲਿਖੋ</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
