--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -1289,4 +1289,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="story_text_description_hindi">మీరు మీ సూక్తులను ఇక్కడ రాయండి</string>
     <string name="stroy_overflow_layout">మీ కథ చాలా పెద్దగా ఉంది. ఫాంట్ సైజ్ తగ్గించండి లేదా కథ నిడివి తగ్గించండి.</string>
     <string name="short_s_write">వ్రాయండి</string>
+    <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
+    <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
 </resources>
