clean up + sharing fixes

--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -884,8 +884,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="your_article_is_successfully_bookmarked">તમારો લેખ બુકમાર્ક કરાયો છે.</string>
     <string name="successfully_updated">સફળતાપૂર્વક અપડેટ કરાયું!</string>
     <string name="submit_story_text">વાર્તા સબમિટ કરો.</string>
-    <string name="this_week_challenge">આ અઠવાડિયા નો ૧૦૦શબ્દોનીવાર્તાચેલેન્જ સ્વીકારો
-</string>
+    <string name="this_week_challenge">આ અઠવાડિયા નો ચેલેન્જ સ્વીકારો</string>
     <string name="previous_week_challenge">ગયા અઠવાડિયા નો પડકાર	</string>
     <string name="what_is_your_story">Wતમારી ૧૦૦ શબ્દોની વાર્તા શું છે?</string>
     <string name="use_picture_word_to_write_one">નીચે આપેલ ફોટો, શબ્દ, શબ્દસમૂહ કાં તો વીડિઓ વાપરી લખો</string>
