--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -21,7 +21,7 @@
     <string name="hint_text">What are you looking for ?</string>
     <string name="locality_txt">In which location?</string>
     <string name="error_network">Device is out of network coverage.</string>
-    <string name="please_wait">Please Wait...</string>
+    <string name="please_wait">કૃપા કરી રાહ જુઓ ...</string>
     <string name="no_result_txt">No result found.</string>
     <string name="invite_referral_screen">Give 25, Get 25!</string>
     <string name="went_wrong">Something went wrong.</string>
@@ -574,7 +574,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="upload_min_width">Please upload image with minimum width of 720 pixels</string>
 
     <string name="image_upload_wait">Please wait while image is being uploaded</string>
-    <string name="editor_title_empty">Title can\'t be empty</string>
+    <string name="editor_title_empty">શીર્ષક ખાલી ન રહી શકે</string>
     <string name="editor_body_empty">Body can\'t be empty</string>
     <string name="editor_title_char_limit">Unable to publish. Title should smaller than 150 characters</string>
     <string name="editor_body_min_words">Please write atleast 300 words to publish</string>
@@ -582,7 +582,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="draft_oops">Oops!</string>
 
     <string name="draft_not_saved">Draft could not be saved, your current changes will be lost if you exit now. Would you like to exit?</string>
-    <string name="draft_save_success">Draft Successfully saved</string>
+    <string name="draft_save_success">ડ્રાફ્ટ સેવ કરવામાં સફળતા</string>
     <string name="verify_email">Mail sent to email address. Please click and verify</string>
     <string name="video_upload_fail">Unable to upload the video. Please try again later.</string>
     <string name="connectivity_unavailable">No connectivity available</string>
@@ -880,7 +880,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="delete_comment">ડીલીટ ટીપ્પણી</string>
     <string name="edit_comment">એડિટ ટીપ્પણી</string>
     <string name="report">રિપોર્ટ</string>
-    <string name="select_atleast_one_topic">Please choose atleast one topic to continue</string>
+    <string name="select_atleast_one_topic">કૃપા કરી આગળ વધવા એક વિષય ની પસંદગી કરો</string>
     <string name="your_article_is_successfully_bookmarked">તમારો લેખ બુકમાર્ક કરાયો છે.</string>
     <string name="successfully_updated">સફળતાપૂર્વક અપડેટ કરાયું!</string>
     <string name="submit_story_text">વાર્તા સબમિટ કરો.</string>
@@ -1397,9 +1397,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="library">સંગ્રહાલય</string>
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">વૈકલ્પિક</string>
-    <string name="stroy_overflow_layout">તમારી વાર્તા લાંબી છે, કૃપા કરી ફોન્ટ સાઈઝ બદલો અથવા વાર્તા ટૂંકી કરો.</string>
+    <string name="stroy_overflow_layout">કૃપા કરી આગળ વધવા ફોન્ટ નો આકાર ઘટાડો અથવા  વાર્તા ટૂંકી કરો.</string>
     <string name="short_s_write">લખો</string>
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-    <string name="moderation_or_share_story_moderation_message">Your article is up for moderation. You\\\'ll receive an email within 24 hours regarding the status of the story.</string>
+    <string name="moderation_or_share_story_moderation_message">આપની વાર્તા મોડરેશન માં છે. વાર્તા ની જાણકારી વિષે ૨૪ કલાક માં મેલ દ્વારા જણાવવામાં આવશે.</string>
 </resources>
