--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1308,9 +1308,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">वैकल्पिक</string>
     <string name="story_text_description_hindi">यहां आप सुविचार (कोट्स) लिख सकते हैं|</string>
-    <string name="stroy_overflow_layout">आपकी कहानी बहुत लंबी है। कृपया फ़ॉन्ट साइज़ कम करें या कहानी को छोटा करें।</string>
+    <string name="stroy_overflow_layout">आगे बढ़ने के लिए कृपया अपने टेक्स्ट का फॉण्ट साइज़ या कहानी को छोटा करें</string>
     <string name="short_s_write">लिखें</string>
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-    <string name="moderation_or_share_story_moderation_message">Your article is up for moderation. You\\\'ll receive an email within 24 hours regarding the status of the story.</string>
+    <string name="moderation_or_share_story_moderation_message">आपकी कहानी मोडरेशन प्रक्रिया में है ,आपको आपकी कहानी  की स्थिति के  बारे में अगले 24 घंटे में  मेल किया जाएगा</string>
 </resources>
