--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1285,9 +1285,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="ss_share_with_friends">Share with Friends</string>
     <string name="short_s_add_title_Optional">पर्यायी</string>
     <string name="story_text_description_hindi">तुम्ही इथे सुविचार (कोट्स) लिहू शकता.</string>
-    <string name="stroy_overflow_layout">तुमची कथा खूप मोठी झाली आहे कृपया फॉन्टचा आकार कमी करा किंवा कथा छोटी करा.</string>
+    <string name="stroy_overflow_layout">कृपया मजकूराचा फॉन्ट आकार कमी करा किंवा पुढे जाण्यासाठी कथेची लांबी लहान करा</string>
     <string name="short_s_write">लिहा</string>
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-    <string name="moderation_or_share_story_moderation_message">Your article is up for moderation. You\\\'ll receive an email within 24 hours regarding the status of the story.</string>
+    <string name="moderation_or_share_story_moderation_message">आपली कथा नियंत्रणासाठी आहे. आपल्याला कथेच्या स्थितीसंदर्भात 24 तासांच्या आत ईमेल प्राप्त होईल</string>
 </resources>
