--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1336,5 +1336,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="short_s_write">എഴുതുക</string>
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-    <string name="moderation_or_share_story_moderation_message">Your article is up for moderation. You\'ll receive an email within 24 hours regarding the status of the story.</string>
+    <string name="moderation_or_share_story_moderation_message">നിങ്ങളുടെ കഥ/കുറിപ്പ് മോഡറേഷൻ പ്രക്രിയയിലാണ്, അടുത്ത 24 മണിക്കൂറിനുള്ളിൽ അതിന്റെ നിലയെക്കുറിച്ച് നിങ്ങൾക്ക് ഇമെയിൽ ലഭിക്കും.</string>
 </resources>
