--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -625,7 +625,7 @@
     <string name="editor_body_min_words">Please write atleast 300 words to publish</string>
     <string name="draft_oops">Oops!</string>
     <string name="draft_not_saved">Draft could not be saved, your current changes will be lost if you exit now. Would you like to exit?</string>
-    <string name="draft_save_success">Draft Successfully saved</string>
+    <string name="draft_save_success">ഡ്രാഫ്റ്റ് വിജയകരമായി സേവ് ചെയ്തു.</string>
     <string name="verify_email">Mail sent to email address. Please click and verify</string>
     <string name="video_upload_fail">Unable to upload the video. Please try again later.</string>
     <string name="connectivity_unavailable">No connectivity available</string>
