--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -1289,7 +1289,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="max_limit">আপনার গল্পের টেক্সট সর্বাধিক আকার অতিক্রম করেছে</string>
     <string name="min_limit">আপনার গল্পের টেক্সট ন্যূনতম আকার অতিক্রম করেছে</string>
     <string name="library">লাইব্রেরী</string>
-    <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="ss_share_with_friends">বন্ধুদের সাথে ভাগ করে নিন</string>
     <string name="short_s_add_title_Optional">ইচ্ছানুযায়ী</string>
     <string name="story_text_description_hint">আপনার উক্তি বা উদ্ধৃতি এখানে লিখতে পারেন</string>
     <string name="stroy_overflow_layout">অনুগ্রহ করে আপনার গল্পটির শব্দসংখ্যা কমিয়ে বা শব্দের আকার ছোট করে পোস্ট করুন,কারণ গল্পটি খুব বড় হয়ে যাচ্ছে</string>
@@ -1297,4 +1297,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
     <string name="moderation_or_share_story_moderation_message">আপনার গল্পটি মডারেশনে আছে।আপনার গল্পটি কোন পর্যায়ে আছে তা আগামী ২৪ ঘন্টার মধ্যে আপনাকে মেইল করে জানানো হবে</string>
+    <string name="ad.bottom_bar.instagram">ইনস্টাগ্রাম</string>
 </resources>
