--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1347,11 +1347,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="max_limit">ਤੁਸੀਂ ਅਧਿਕਤਮ ਸੀਮਾ ਤੇ ਪਹੁੰਚ ਗਏ ਹੋ</string>
     <string name="min_limit">ਤੁਸੀਂ ਘੱਟੋ ਘੱਟ ਸੀਮਾ ਤੇ ਪਹੁੰਚ ਗਏ ਹੋ</string>
     <string name="library">ਲਾਇਬ੍ਰੇਰੀ</string>
-    <string name="ss_share_with_friends">Share with Friends</string>
+    <string name="ss_share_with_friends">ਦੋਸਤਾਂ ਨਾਲ ਸਾਂਝਾ ਕਰੋ</string>
     <string name="short_s_add_title_Optional">ਵਿਕਲਪਿਕ</string>
     <string name="stroy_overflow_layout">ਕਿਰਪਾ ਕਰਕੇ ਅੱਗੇ ਜਾਣ ਲਈ ਟੈਕਸਟ ਫੋਂਟ ਦਾ ਆਕਾਰ ਘਟਾਓ ਜਾਂ ਕਹਾਣੀ ਦੀ ਲੰਬਾਈ ਨੂੰ ਛੋਟਾ ਕਰੋ</string>
     <string name="short_s_write">ਲਿਖੋ</string>
     <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
     <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
     <string name="moderation_or_share_story_moderation_message">ਤੁਹਾਡੀ ਕਹਾਣੀ ਮੋਡਰੇਸ਼ਨ ਅਧੀਨ ਹੈ। ਤੁਸੀਂ ਕਹਾਣੀ ਦੀ ਸਥਿਤੀ ਦੇ ਸੰਬੰਧ ਵਿੱਚ 24 ਘੰਟਿਆਂ ਦੇ ਅੰਦਰ ਇੱਕ ਈਮੇਲ ਪ੍ਰਾਪਤ ਕਰੋਗੇ</string>
+    <string name="ad.bottom_bar.instagram">ਇੰਸਟਾਗ੍ਰਾਮ</string>
 </resources>
